swi-prolog: Add link to features in description

--- a/swi-prolog/swi-prolog.nuspec
+++ b/swi-prolog/swi-prolog.nuspec
@@ -21,7 +21,7 @@
     <tags>swi-prolog prolog logic programming language admin</tags>
     <summary>A comprehensive Prolog implementation</summary>
     <description><![CDATA[
-SWI-Prolog offers a comprehensive free Prolog environment. Since its start in 1987, SWI-Prolog development has been driven by the needs of real world applications. SWI-Prolog is widely used in research and education as well as commercial applications. Join over a million users who have downloaded SWI-Prolog.
+SWI-Prolog offers a comprehensive free Prolog environment. Since its start in 1987, SWI-Prolog development has been driven by the needs of real world applications. SWI-Prolog is widely used in research and education as well as commercial applications. Join over a million users who have downloaded SWI-Prolog. [more ...](http://www.swi-prolog.org/features.html)
 ]]></description>
     <releaseNotes>http://www.swi-prolog.org/ChangeLog?branch=stable</releaseNotes>
     <dependencies>
