--- a/haskell-stack/haskell-stack.nuspec
+++ b/haskell-stack/haskell-stack.nuspec
@@ -4,7 +4,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
     <id>haskell-stack</id>
-    <version>1.9.3</version>
+    <version>2.1.1</version>
     <packageSourceUrl>https://github.com/brunoyb/chocolatey-packages/tree/master/haskell-stack</packageSourceUrl>
     <owners>Bruno Baldochi</owners>
     <title>Haskell Stack</title>
@@ -37,13 +37,13 @@ The links provided with the package are related to The Haskell Tool Stack, if yo
 
 The following package parameters can be set:
 
-* `NoLocalBinOnPath` - this disables putting %APPDATA%\local\bin on Path. You usually want this if you configure your local-bin-path to other than the default.
-* `NoStackRoot` - this disables setting STACK_ROOT to %SystemDrive%\sr (e.g. C:\sr) to workaround issues with long paths. It is recommended that you leave this enabled.
+* `NoLocalBinOnPath` - this disables putting `%APPDATA%\local\bin` on Path. You usually want this if you configure your local-bin-path to other than the default.
+* `NoStackRoot` - this disables setting `STACK_ROOT` to `%SystemDrive%\sr` (e.g. `C:\sr`) to workaround issues with long paths. It is recommended that you leave this enabled.
 
 These parameters can be passed to the installer with the use of `-params`.
 For example: `-params '"/NoLocalBinOnPath /NoStackRoot"'`.
 ]]></description>
-    <releaseNotes>https://github.com/commercialhaskell/stack/releases/tag/v1.9.3</releaseNotes>
+    <releaseNotes>https://github.com/commercialhaskell/stack/releases/tag/v2.1.1</releaseNotes>
   </metadata>
   <files>
     <file src="tools\**" target="tools" />
