--- a/haskell-stack/haskell-stack.nuspec
+++ b/haskell-stack/haskell-stack.nuspec
@@ -4,7 +4,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
     <id>haskell-stack</id>
-    <version>2.1.3</version>
+    <version>2.1.3.20190715</version>
     <packageSourceUrl>https://github.com/brunoyb/chocolatey-packages/tree/master/haskell-stack</packageSourceUrl>
     <owners>Bruno Baldochi</owners>
     <title>Haskell Stack</title>
