--- a/sbt/sbt.nuspec
+++ b/sbt/sbt.nuspec
@@ -5,12 +5,12 @@
   <metadata>
     <id>sbt</id>
     <version>1.3.2</version>
-    <packageSourceUrl>https://github.com/brunoyb/chocolatey-packages/tree/master/_personal/sbt</packageSourceUrl>
+    <packageSourceUrl>https://github.com/brunoyb/chocolatey-packages/tree/master/sbt</packageSourceUrl>
     <owners>Bruno Baldochi</owners>
     <title>sbt</title>
     <authors>Lightbend Inc.</authors>
     <projectUrl>https://www.scala-sbt.org/</projectUrl>
-    <iconUrl>https://cdn.jsdelivr.net/gh/brunoyb/chocolatey-packages@ab87c8540007ed240d940ef34da45b55653f667b/_personal/sbt/icon.svg</iconUrl>
+    <iconUrl>https://cdn.jsdelivr.net/gh/brunoyb/chocolatey-packages@6ef72e9e64e27784c6e0db059fc89d7b5538f488/sbt/icon.svg</iconUrl>
     <copyright>2011-2017 Lightbend Inc.</copyright>
     <licenseUrl>https://github.com/sbt/sbt/blob/develop/LICENSE</licenseUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
