--- a/fossil/fossil.nuspec
+++ b/fossil/fossil.nuspec
@@ -4,7 +4,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
     <id>fossil</id>
-    <version>2.10</version>
+    <version>2.10.0.20191010</version>
     <packageSourceUrl>https://github.com/brunoyb/chocolatey-packages/tree/master/fossil</packageSourceUrl>
     <owners>Bruno Baldochi</owners>
     <title>Fossil SCM</title>
