AU: 3 updated - robo3t robo3t.install robo3t.portable [skip ci] https://gist.github.com/0c6170c4a6f7450fa864dd59684509d9/5bda7ad8b2208b7974a12327a41bac05f9281899

--- a/robo3t.portable/robo3t.portable.nuspec
+++ b/robo3t.portable/robo3t.portable.nuspec
@@ -4,7 +4,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
     <id>robo3t.portable</id>
-    <version>1.4.0</version>
+    <version>1.4.0.20200907</version>
     <packageSourceUrl>https://github.com/brunoyb/chocolatey-packages/tree/master/robo3t.portable</packageSourceUrl>
     <owners>Bruno Baldochi</owners>
     <title>Robo 3T (Portable)</title>
