--- a/robo3t/robo3t.nuspec
+++ b/robo3t/robo3t.nuspec
@@ -23,7 +23,7 @@ Formerly known as Robomongo (more info on https://robomongo.org/), Robo 3T is a 
 ]]></description>
     <releaseNotes>https://github.com/Studio3T/robomongo/blob/master/CHANGELOG</releaseNotes>
     <dependencies>
-      <dependency id="robo3t.install" version="1.4.1" />
+      <dependency id="robo3t.install" version="[1.4.1]" />
     </dependencies>
   </metadata>
   <files>
