--- a/sbt/sbt.nuspec
+++ b/sbt/sbt.nuspec
@@ -4,7 +4,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
     <id>sbt</id>
-    <version>1.3.13</version>
+    <version>1.3.13.20201001</version>
     <packageSourceUrl>https://github.com/brunoyb/chocolatey-packages/tree/master/sbt</packageSourceUrl>
     <owners>Bruno Baldochi</owners>
     <title>sbt</title>
