--- a/robo3t.portable/robo3t.portable.nuspec
+++ b/robo3t.portable/robo3t.portable.nuspec
@@ -4,7 +4,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
     <id>robo3t.portable</id>
-    <version>1.4.3.20210228</version>
+    <version>1.4.4</version>
     <packageSourceUrl>https://github.com/brunoyb/chocolatey-packages/tree/master/robo3t.portable</packageSourceUrl>
     <owners>Bruno Baldochi</owners>
     <title>Robo 3T (Portable)</title>
@@ -21,7 +21,7 @@
     <description><![CDATA[
 Formerly known as Robomongo (more info on https://robomongo.org/), Robo 3T is a shell-centric cross-platform MongoDB management tool. Unlike most other MongoDB admin UI tools, Robo 3T embeds the actual `mongo` shell in a tabbed interface with access to a shell command line as well as GUI interaction.
 ]]></description>
-    <releaseNotes>https://github.com/Studio3T/robomongo/releases/tag/v1.4.3</releaseNotes>
+    <releaseNotes>https://github.com/Studio3T/robomongo/releases/tag/v1.4.4</releaseNotes>
   </metadata>
   <files>
     <file src="tools\**" target="tools" />
