--- a/sbt/sbt.nuspec
+++ b/sbt/sbt.nuspec
@@ -15,7 +15,7 @@
     <licenseUrl>https://github.com/sbt/sbt/blob/develop/LICENSE</licenseUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <projectSourceUrl>https://github.com/sbt/sbt</projectSourceUrl>
-    <docsUrl>https://www.scala-sbt.org/documentation.html</docsUrl>
+    <docsUrl>https://www.scala-sbt.org/1.x/docs/</docsUrl>
     <mailingListUrl>https://groups.google.com/d/forum/sbt-dev</mailingListUrl>
     <bugTrackerUrl>https://github.com/sbt/sbt/issues</bugTrackerUrl>
     <tags>sbt scala java functional programming language admin</tags>
