--- a/swi-prolog/swi-prolog.nuspec
+++ b/swi-prolog/swi-prolog.nuspec
@@ -4,7 +4,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
     <id>swi-prolog</id>
-    <version>9.2.2.1</version>
+    <version>9.2.3.1</version>
     <packageSourceUrl>https://github.com/brunoyb/chocolatey-packages/tree/master/swi-prolog</packageSourceUrl>
     <owners>Bruno Baldochi</owners>
     <title>SWI-Prolog</title>
@@ -22,6 +22,8 @@
     <summary>A comprehensive Prolog implementation</summary>
     <description><![CDATA[
 SWI-Prolog offers a comprehensive free Prolog environment. Since its start in 1987, SWI-Prolog development has been driven by the needs of real world applications. SWI-Prolog is widely used in research and education as well as commercial applications. Join over a million users who have downloaded SWI-Prolog. [more ...](http://www.swi-prolog.org/features.html)
+
+This software is safe to use and is known to give false positive results for some antiviruses. You can read a comment from the author about this [here](https://github.com/SWI-Prolog/issues/issues/67).
 ]]></description>
     <releaseNotes>http://www.swi-prolog.org/ChangeLog?branch=stable</releaseNotes>
     <dependencies>
