--- a/studio3t/studio3t.nuspec
+++ b/studio3t/studio3t.nuspec
@@ -19,7 +19,7 @@
     <description><![CDATA[
 Used by most MongoDB professionals, Studio 3T makes working with MongoDB easy with features like Visual Query Builder, IntelliShell, SQL Query, Aggregation Editor and much more.
 
-Studio 3T is free for non-commercial use or you can freely evaluate it for commercial purposes for 30 days.
+Studio 3T is free for non-commercial use. They offer a free trial for other use cases.
 ]]></description>
     <releaseNotes>https://files.studio3t.com/changelog/changelog.txt</releaseNotes>
   </metadata>
